--- a/templates/index.jade
+++ b/templates/index.jade
@@ -1,5 +1,5 @@
 doctype html
-html(class="no-js", lang="en", ng-app="myApp")
+html(class="no-js", lang="en", ng-app="app")
 	head
 		title factual api
 		meta(name="viewport" content="width=device-width, initial-scale=1")
